--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>freePhoto</title>
+    <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
+    <script src="../path/to/flowbite/dist/flowbite.js"></script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
